--- a/.github/workflows/mertricstest.yml
+++ b/.github/workflows/mertricstest.yml
@@ -105,7 +105,7 @@ jobs:
           github.head_ref == 'iter13' ||
           github.head_ref == 'iter14'
         run: |
-          metricstest -test.v -test.run=^TestIteration2[AB]*$ \
+          metricstest -test.v -test.run='^TestIteration2[AB]*$' \
             -source-path=. \
             -agent-binary-path=cmd/agent/agent
 
@@ -125,7 +125,7 @@ jobs:
           github.head_ref == 'iter13' ||
           github.head_ref == 'iter14'
         run: |
-          metricstest -test.v -test.run=^TestIteration3[AB]*$ \
+          metricstest -test.v -test.run='^TestIteration3[AB]*$' \
             -source-path=. \
             -agent-binary-path=cmd/agent/agent \
             -binary-path=cmd/server/server
@@ -272,10 +272,10 @@ jobs:
           SERVER_PORT=$(random unused-port)
           ADDRESS="localhost:${SERVER_PORT}"
           TEMP_FILE=$(random tempfile)
-          metricstest -test.v -test.run=^TestIteration10[AB]$ \
+          metricstest -test.v -test.run='^TestIteration10[AB]$' \
             -agent-binary-path=cmd/agent/agent \
             -binary-path=cmd/server/server \
-            -database-dsn='postgres://postgres:postgres@postgres:5432/praktikum?sslmode=disable' \
+            -database-dsn='postgres://postgres:postgres@localhost:5432/praktikum?sslmode=disable' \
             -server-port=$SERVER_PORT \
             -source-path=.
 
